--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
   <ul id="log"></ul>
 
   <script>
-  let audio = new Audio();
+  let audio = null;
   let startTime = null;
   let activeKeys = {};
   let logList = document.getElementById("log");
 
+  // When user selects a file, load it into an Audio object
+  document.getElementById("audioFile").addEventListener("change", function(e) {
+    const file = e.target.files[0];
+    if (file) {
+      const url = URL.createObjectURL(file);
+      audio = new Audio(url);
+    }
+  });
+
   document.getElementById("startBtn").addEventListener("click", function() {
+    if (!audio) {
+      alert("Please select an audio file first!");
+      return;
+    }
     logList.innerHTML = "";
     startTime = performance.now();
+    audio.currentTime = 0; // restart from beginning
     audio.play();
   });
 
@@ -39,8 +53,6 @@
 
     delete activeKeys[e.key];
   });
-</script>
+  </script>
 </body>
 </html>
-
-
